--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ben Seager",
+  "license": "MIT",
   "dependencies": {
     "cron": "^1.3.0",
-    "sense-hat-led: "1.0.1",
-    "twitter": "1.7.1"  
+    "sense-hat-led": "1.0.1",
+    "twitter": "1.7.1"
   }
 }
